issue Resolved:-Fix Text Field Alignment Issues on Mobile Screens in EditAccountInfo Page

--- a/frontend/src/components/Form/ChipTextField/ChipTextField.module.css
+++ b/frontend/src/components/Form/ChipTextField/ChipTextField.module.css
@@ -62,7 +62,7 @@
 @media (min-width: 801px) and (max-width: 1349px) {
   .chipInputContainer {
     width: 100%;
-    padding: 15px;
+    /* padding: 15px; */
   }
 }
 
@@ -70,6 +70,6 @@
 @media (max-width: 800px) {
   .chipInputContainer {
     width: 100%;
-    padding: 10px;
+    /* padding: 10px; */
   }
 }
